# -VRLRRG-Voice-Room-Live-Real-time-Report-Generator

./: .gitignore  CMakeLists.txt  README.md  README_CN.md  Update.md  Update_CN.md
Docs/: Build.md  Build_CN.md  Develop.md  Develop_CN.md  ImportTheUILibrary.md  ImportTheUILibrary_CN.md
Src/: DataStructures.h  Resource.h  TargetDialog.cpp  TargetDialog.h  TimePickerDialog.cpp  TimePickerDialog.h  main.cpp  settings.cpp  settings.h
